<resources>
    <!--String view Menu -->
    <string name="nav_user">Perfil</string>
    <string name="nav_crop">Cultivos</string>

    <!--String view Rizoma registered User-->
    <string name="text_user">Usuario</string>
    <string name="text_password">Contraseña</string>
    <string name="text_password_validate">Comprobar contraseña</string>
    <string name="text_btn_registered">Registrar</string>

    <!-- Strings view Pest -->
    <string name="text_pets">Descripción</string>
    <string name="text_pets_solution">Solución</string>

    <string name="app_name">Rizoma</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_surname">Apellido</string>
    <string name="prompt_password">Contraseña</string>
    <string name="prompt_password_2">Confirmar contraseña</string>
    <string name="action_registered">Registrarse</string>
    <string name="text_general">Texto</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Registro </string>
    <string name="title_activity_detail_crop">DetailCrop</string>
    <string name="title_crop">Cultivo</string>
    <string name="title_pets">Plagas</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="title_configuration">Configuración</string>
    <string name="title_cycle_crop">Ciclos</string>
    <!--Text navigation cycle crops-->
    <string name="title_cycle1_crops">Germinación</string>
    <string name="title_cycle2_crops">Ahijamiento</string>
    <string name="title_cycle3_crops">Gran Crecimiento</string>
    <string name="title_cycle4_crops">Maduración</string>
    <!--Text view cycle crops-->
    <string name="title_view_crops_data_sheet">Ficha Técnica</string>
    <string name="title_view_crops_table_element">Tabla de Elementos</string>
    <string name="text_crops_data">Cantidad</string>
    <string name="text_crops_count">Elemento</string>
    <string name="text_crops_unit">Unidad</string>
    <string name="text_crops_description">Descripcion</string>
    <string name="text_crops_long">Longitud del cultivo</string>
    <string name="text_crops_">Longitud del cultivo</string>
    <string name="text_crops_irrigation">Sistema de riego</string>
    <string name="text_crops_requited">Edafoclimático</string>
    <string name="text_crops_width">Ancho</string>
    <string name="text_crops_height">Alto</string>
    <string name="text_crops_counts">Número de plantas</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transition">animation_image</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
</resources>
