<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_crop"
            android:icon="@drawable/ic_house_with_tree_leaf_24"
            android:title="@string/nav_crop" />
        <item
            android:id="@+id/nav_pest"
            android:icon="@drawable/ic_bug_report_black_24dp"
            android:title="@string/title_pets" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="Slideshow" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="Tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/nav_user" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
