<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewCrops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="10dp"
        card_view:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_pest"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:contentDescription="@string/action_registered"
                android:scaleType="centerCrop"
                android:src="@drawable/acelga" />

            <TextView
                android:id="@+id/name_pest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/layout_content"
                android:layout_gravity="bottom"
                android:background="#8c000000"
                android:padding="10dp"
                android:text="@string/text_general"
                android:textColor="#ffe3e3e3"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TableLayout
                android:id="@+id/layout_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_pest"
                android:orientation="horizontal"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/text_pets"
                        android:textSize="23sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:gravity="center"
                        android:padding="3dp"
                        android:text="@string/text_pets_solution"
                        android:textSize="23sp"
                        android:textStyle="bold" />
                </TableRow>

                <TableRow>

                    <TextView
                        android:id="@+id/description_pest"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/fab_margin"
                        android:text="" />

                    <TextView
                        android:id="@+id/description_pest_solution"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/fab_margin"
                        android:text="" />

                </TableRow>
            </TableLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>
